2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 536996 – Missing noop i18n macro equivalent to C_

	* glib/glib.symbols:
	* glib/gstrfuncs.[hc]: Add g_dpgettext2() which is a 
	variant of g_dpgettext() taking context and id as separate
	arguments.

	* glib/gi18n-lib.h:
	* glib/gi18n.h: Add an NC_() macro that is to C_() as N_()
	is to _().

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am:
	* tests/keyfile-test.c:
	* tests/option-test.c: Remove
	* glib/tests/option-context.c: Add all GOptionContext tests here.
	* glib/tests/keyfile.c: Add all GKeyFile tests here.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 334234 – "printf" format error

	* glib/gslice.c (mem_error): Avoid a warning when printing a pid_t.
	Pointed out by Morten Welinder. 

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 406120 – g_ascii_strtod

	* glib/gstrfuncs.c (g_ascii_strtod): Document that this
	function does accept localized infinities and nans. Reported
	by Morten Welinder.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 482413 - get_contents_stdio -- overflow and memory corruption

	* glib/gfileutils.c (get_contents_stdio): Detect overflow and
	error out. Reported by Morten Welinder. 

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 542332 – small fix for error message in GMarkup
	
	* glib/gmarkup.c: Improve an error message. 
	Patch by Ryan Lortie

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 428048 – 2 of 51 tests fail on Solaris

	* tests/iochannel-test.c: Ignore the error if iconv doesn't
	support EUC-JP.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Print error messages when something fails.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 467707 – test_iconv_state() in tests/convert-test.c fails on AIX 5.3

	* tests/convert-test.c (test_iconv_state): Skip this test if
	CP1255 is not supported.  
